--- a/index.html
+++ b/index.html
@@ -1,8 +1,85 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> WEB 3 (1) Exam </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--final website name-->
+    <title>JavaScript Playground</title>
+    <link rel="stylesheet" href="./style.css">
+
+
 </head>
+
+<!--check for div and span class attributes name with different strctiure kushagra gupta-->
+<!--check for next file and its attrinboyres gsodljao -->
+
+<!-- checvk for the page viewer-->
+
+
+
 <body>
-<h1> Kushagra Gupta</h1>
+    <header>
+    </header>
+    <main>
+        <article>
+            <h1 class="head h" id="bhead">Book Title</h1>
+            <div class="bo b" id="btext">
+                Select a Book on the right.
+                <!--check for next file and its attrinboyres gsodljao -->
+
+<!-- checvk for the page viewer-->
+
+            </div>
+        </article>
+        <aside>
+
+            <!--check for div and span class attributes name with different strctiure kushagra gupta-->
+            <section class="search">
+                <h1 class="head">Search</h1>
+                <div class="bo">
+                    <input type="text" placeholder="Search for...">
+                    <button> Search</button>
+                </div>
+                <!--check for div and span class attributes name with different strctiure kushagra gupta-->
+                
+            </section>
+            <section class="search">
+                <h1 class="head">Select a book</h1>
+                <div class="bo books">
+                    <a href="./books/AliceInWonderland.txt" id="alice">Alice In Wonderland</a>
+                    <a href="./books/JekyllAndHyde.txt" id="hyde">Jekyll And Hyde</a>
+                    <a href="./books/LOTR.txt" id="lord">Lord Of The Rings</a>
+                </div>
+                <!--check for div and span class attributes name with different strctiure kushagra gupta-->
+            </section>
+            <section class="search">
+                <h1 class="head">Most Used Words</h1>
+                <div class="bo">
+                    <!--check for div and span class attributes name with different strctiure kushagra gupta-->
+                </div>
+            </section>
+            <section class="search">
+                <h1 class="head">Least Used Words</h1>
+                <div class="bo">
+                    <!--check for div and span class attributes name with different strctiure kushagra gupta-->
+                </div>
+            </section>
+            <section class="search">
+                <h1 class="head">Document Stats</h1>
+                <div class="bo">
+                    <!--check for div and span class attributes name with different strctiure kushagra gupta-->
+                </div>
+            </section>
+            <!--check for next file and its attrinboyres gsodljao -->
+
+<!-- checvk for the page viewer-->
+
+        </aside>
+    </main>
+   
+<!--making and connecting the json and modules with java script file Kushagra Gupta-->
+    <a href="./imagematch.html" id="game">NEXT</a>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
