--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </main>
    
 <!--making and connecting the json and modules with java script file Kushagra Gupta-->
-    <a href="./imagematch.html" id="game">NEXT</a>
+    <a href="https://kushagra0207.github.io/Web_2_file/" id="game">NEXT</a>
     <script src="./script.js" type="module"></script>
 </body>
 </html>
